--- a/_assets/sass/components/_buttons.scss
+++ b/_assets/sass/components/_buttons.scss
@@ -22,6 +22,12 @@
   &--white { background-color: $white; color: $black;
     &:hover { background-color: rgba($white, .8); }
   }
+  &--yellow { background-color: $bv-yellow; color: $black;
+    &:hover { background-color: rgba($white, 1); }
+  }
+  &--blue { background-color: $bv-darkblue; color: $white;
+    &:hover { background-color: rgba($bv-darkblue, .8); }
+  }
   &--outline {
     color: inherit;
     //background-color: $white;
