--- a/_assets/sass/core/_colours.scss
+++ b/_assets/sass/core/_colours.scss
@@ -21,10 +21,19 @@ $turquoise-darker:  #006a75;
 // // brand colours
 // $b-red: #ff0000;
 
-$bv-yellow: #ffcb05;
-$bv-red: #ed1c24;
-$bv-green: #01954A;
-$bv-blue: #004794;
-$bv-lightgrey: #eee;
-$bv-bluegrey: #222632;
-$bv-fontgrey: #909298;
+$bv-yellow:         #ffcb05;
+$bv-red:            #ed1c24;
+$bv-green:          #01954A;
+$bv-blue:           #004794;
+$bv-lightgrey:      #eee;
+$bv-bluegrey:       #222632;
+$bv-fontgrey:       #909298;
+$bv-beige:          #dfdbce;
+
+$bv-orange:         #f6a100;
+$bv-lightgreen:     #4cad31;
+$bv-darkblue:       #00567a;
+$bv-turquoise:      #30b6b8;
+$bv-purple:         #ba0e71;
+
+$bv-accordion-color: $bv-darkblue;
