--- a/_assets/sass/page/_banner.scss
+++ b/_assets/sass/page/_banner.scss
@@ -10,7 +10,7 @@
   min-height: 450px;
   max-height: 700px;
   color: $white;
-  background-color: $black;
+  background-color: $bv-bluegrey;
   overflow: hidden;
   @include bp($lg){
     min-height: 650px;
@@ -34,7 +34,7 @@
     right: 0;
     bottom: 0;
     z-index: $z-content;
-    background-color: $grey-dark;
+    background-color: $bv-bluegrey;
     @include background-attributes;
 
   }
