--- a/_includes/page/promo-signup.html
+++ b/_includes/page/promo-signup.html
@@ -8,7 +8,7 @@
       </div>
       <div class="space--md"></div>
       <div class="width width--md ">
-  <a href="{{site.baseurl}}{{destination.url}}" class="btn btn--orange">Mehr erfahren</a>
+  <a href="{{site.baseurl}}{{destination.url}}" class="btn btn--yellow">Mehr erfahren</a>
       </div>
     </div>
   </div>
