--- a/_includes/page/reiserouten/intro.html
+++ b/_includes/page/reiserouten/intro.html
@@ -1,8 +1,8 @@
 
 
-<div class="vpad--lg bg--light bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-2000px.png');">
+<div class="vpad--xxl bg--light bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-2000px.png');">
     <div class="container">
-      <div class="space--xl"></div>
+
     <div class="width width--lg">
        <div class="text text--xl text--center">
          <h2 class="title title--lg bv-headline-divider text--bold">{{section.title}}</h2>
