--- a/_includes/offer/all-offers.html
+++ b/_includes/offer/all-offers.html
@@ -1,6 +1,6 @@
 {% include offer/variables.html %}
-<div class="bg--light">
-<div class="container vpad--xxxl">
+<div class="bg--light bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-50pc-2000px.png');">
+<div class="container vpad--lg">
   <div class="row row--xl-6-6 row--gutters-lg">
     {% for offer in offers-by-price %}
       <div class="col">
