--- a/_assets/sass/typography/_titles.scss
+++ b/_assets/sass/typography/_titles.scss
@@ -5,6 +5,7 @@
   // custom content headline
   font-family: $sans;
   line-height: 1.2;
+  &--xxxxl   { font-size: $s9; }
   &--xxxl   { font-size: $s8; }
   &--xxl    { font-size: $s7; }
   &--xl     { font-size: $s5; }
@@ -14,8 +15,9 @@
   &--xs     { font-size: $s1; }
   &--xxs    { font-size: $s1; }
   &--xxxs   { font-size: $s0; }
-  
+
   @include bp($lg){
+    &--xxxxl   { font-size: $s10; }
     &--xxxl   { font-size: $s9; }
     &--xxl    { font-size: $s8; }
     &--xl     { font-size: $s7; }
@@ -52,6 +54,7 @@
   font-weight: 300;
   letter-spacing: -.02em;
 
+
   &--xxxl   { font-size: $s8; line-height: 1.1; }
   &--xxl    { font-size: $s7; line-height: 1.1; }
   &--xl     { font-size: $s6; line-height: 1.2; }
@@ -81,7 +84,47 @@
   // custom banner headline
   font-family: $serif;
   font-size: $s6;
-  @include bp($md){ font-size: $s8; }
-  @include bp($xl){ font-size: $s12; }
+  line-height: 1.1;
+
+    &--sm   { font-size: $s3; }
+    &--lg   { font-size: $s5; }
+    &--xl   { font-size: $s6; }
+    &--xxl   { font-size: $s7; }
+
+    @include bp($sm){
+      //letter-spacing: .1rem;
+      font-size: $s5;
+
+      &--sm   { font-size: $s4; }
+      &--lg   { font-size: $s6; }
+      &--xl   { font-size: $s7; }
+      &--xxl   { font-size: $s8; }
+    }
+    @include bp($md){
+      //letter-spacing: .1rem;
+      font-size: $s6;
+
+    &--sm   { font-size: $s5; }
+    &--lg   { font-size: $s7; }
+    &--xl   { font-size: $s8; }
+    &--xxl   { font-size: $s10; }
+    }
+    @include bp($lg){
+      font-size: $s8;
+
+      &--sm   { font-size: $s6; }
+      &--lg   { font-size: $s8; }
+      &--xl   { font-size: $s9; }
+      &--xxl   { font-size: $s10; }
+    }
+
+    @include bp($xl){
+      font-size: $s9;
+
+      &--sm   { font-size: $s7; }
+      &--lg   { font-size: $s8; }
+      &--xl   { font-size: $s10; }
+      &--xxl   { font-size: $s12; }
+    }
 
 }
