--- a/_includes/offer/offer.html
+++ b/_includes/offer/offer.html
@@ -2,11 +2,11 @@
 
   <a class="offer__link" href="{{offer.link}}"><span class="btn btn--orange">View Offer</span></a>
 
-  {% if offer.image %}
-    <div class="bg-img bg-img--3-2" style="background-image: url('{{offer.image}}')"></div>
-  {% else %}
-    <div class="bg-img bg-img--3-2" style="background-image: url('{{site.img}}/offers/{{offer.id}}.jpg')"></div>
-  {% endif %}
+  <div class="bg-img bg-img--3-2" style="background-image: url('{{offer.image}}')">
+    {% if offer.tag  %}
+      <img class="flight-tag" src="{{site.img}}/icons/tag-{{offer.tag}}.png">
+    {% endif %}
+  </div>
 
   <div class="offer__content">
 
@@ -17,15 +17,17 @@
     <div class="offer__bottom">
       {% if offer.saved %}
         <div class="offer__saved">
-          <div class="offer__saved-label">Save up to</div>
+          <div class="offer__saved-label">Sparen Sie bis&nbsp;zu</div>
           <div class="offer__saved-percent">{{offer.saved}}%</div>
         </div>
       {% endif %}
       <div class="offer__details">
-        <div>From <span class="offer__price">£{{offer.price}}</span></div>
-        <div class="text--sm">{{offer.price-description}}</div>
-        <div class="js-offer-expires text--sm" data-expires="{{offer.expires}}"></div>
-      </div>
+          <div>Ab <span class="offer__price">{{offer.price}}€</span></div>
+          <div class="text--sm">{{offer.price-description}}</div>
+          {% if offer.expires  %}
+            <div style="display: none;" class="js-offer-expires text--sm" data-expires="{{offer.expires}}"></div>
+          {% endif %}
+        </div>
       <div class="offer__arrow"></div>
     </div>
 
