--- a/_includes/page/banner.html
+++ b/_includes/page/banner.html
@@ -1,6 +1,6 @@
 <div class="banner">
   <div class="site-header__offset"></div>
-  <div class="banner__bg bv-parallax bv-banner-out" style="background-image: url('{{site.img}}/content/{{page.id}}/hero.jpg'); opacity: .7;"></div>
+  <div class="banner__bg bv-parallax bv-banner-out" style="background-image: url('{{site.img}}/content/{{page.id}}/hero.jpg'); opacity: .7; {{page.banner.bg-hero}}"></div>
   <div class="banner__wrap">
     {% if page.banner.content %}
       {{page.banner.content | liquify}}
@@ -9,7 +9,8 @@
     {% else %}
       <div class="container container--no-padding text--center">
         {% if page.banner.title-sup %}<h2 class="sub-title sub-title--md text--bold text--upper">{{page.banner.title-sup}}</h2>{% endif %}
-        <h1 class="banner-title ">{% if page.banner.title %}{{page.banner.title}}{% else %}{{page.title}}{% endif %}</h1>
+        <h1 class="banner-title {{page.banner.title-size}} ">{% if page.banner.title %}{{page.banner.title}}{% else %}{{page.title}}{% endif %}</h1>
+          <div class="space--md"></div>
         {% if page.banner.title-sub %}<h2 class="sub-title sub-title--md text--bold text--upper">{{page.banner.title-sub}}</h2>{% endif %}
       </div>
     {% endif %}
