--- a/_includes/page/empfehlung.html
+++ b/_includes/page/empfehlung.html
@@ -1,23 +1,20 @@
-<div class="vpad--xxl">
-  <div class="container bg--white">
-  <div class="row row--3-3-3-3 row--gutters ">
 
-    <div class="col--lg--3 bv-img-insider boxpad--lg">
-      <div class="bg-img bg-img--1-1 bv-img-circle " style="background-image: url('{{site.img}}/content/empfehlung/kristof.jpg'); margin-top:0px; " ></div>
-    </div>
-    <div class="col col--9 bv-mob-center boxpad--lg" style="margin-top:-15px;">
-      <div class="space--md"></div>
-      <h3 class=" title title--lg ">Empfehlung des Fotografen</h3>
-        <div class="space--sm"></div>
-          <h3 class=" title title--sm text--normal ">Lorem ipsum</h3>
+<div class="vpad--xxl  bv-parallax" style="background-image:url({{site.img}}/content/empfehlung/hero.jpg); background-repeat:no-repeat; background-size:cover; background-position: center;">
+  <div class="container">
+    <div class="row row--3-3-3-3 row--gutters text--white">
+      <div class="col--lg--3 bv-img-insider boxpad--lg">
+        <div class="bg-img bg-img--1-1 bv-img-circle " style="background-image: url('{{site.img}}/content/empfehlung/kristof.jpg'); margin-top:0px; " ></div>
+      </div>
+      <div class="col col--9 bv-mob-center boxpad--lg" style="margin-top:-15px;">
+        <div class="space--md"></div>
+        <h3 class=" title title--md ">Empfehlung von Nikon-Fotograf Kristof</h3>
+            <div class="space--md"></div>
+        <div class=" text text--xl text--italic ">„{{page.tipps.description}}“</div>
+        <div class="space--lg"></div>
+          <h3 class=" title title--xxs text--bold text--upper ">Fototipp: </h3>
           <div class="space--xs"></div>
-      <div class=" text text--lg text ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-      <div class="space--md"></div>
-      <div class="bg-img bg-img--16-9 " style="background-image: url('{{site.img}}/content/{{page.id}}/hero.jpg'); margin-top:0px; " ></div>
-      <div class="space--md"></div>
+        <div class=" text text--xl" >{{page.tipps.fototipp}}</div>
+      </div>
     </div>
-
   </div>
-</div>
-
 </div>
