--- a/_includes/page/footer.html
+++ b/_includes/page/footer.html
@@ -2,8 +2,11 @@
   {% include nav/site.html theme="footer" %}
   <div class="site-footer__wrap">
     <div>
+
       {% include components/logo-se.html placement="footer" small='true' %}<br>
-      {% include components/logo-partner.html placement="footer" small='true' %}
+      {% include components/logo-partner-footer.html placement="footer" small='true' %}
+
+
     </div>
     <div class="space--sm text--sm">
       <p>© Copyright <span class="js-year">2018</span> Secret Escapes</p>
