--- a/_includes/page/promo-signup.html
+++ b/_includes/page/promo-signup.html
@@ -1,14 +1,14 @@
 <div class="vpad--xxxxl bg--img" style="background-image: url('{{site.img}}/content/gewinnspiel/hero.jpg'); background-position: center 20% ; ">
   <div class="container container--xl" style="">
     <div class="text--center text--white">
-      <h1 class="title title--xxxl" style="font-family: 'Source Serif Pro', Georgia, serif; ">Gewinnspiel</h1>
+      <h1 class="title title--xxxl text--serif" >Gewinnspiel</h1>
         <div class="space--md"></div>
       <div class="width width--lg">
-        <p class="title title--sm text--normal">Gewinnen Sie eine Fotoreise nach Südafrika – mit Ihrer eigenen Nikon Kamera.</p>
+        <p class="title title--xs text--normal">Gewinnen Sie eine Reise nach Südafrika inkl. Flügen von South African Airways – mit Ihrer eigenen Nikon Kamera.</p>
       </div>
-      <div class="space--md"></div>
+      <div class="space--xl"></div>
       <div class="width width--md ">
-  <a href="{{site.baseurl}}{{destination.url}}" class="btn btn--yellow">Mehr erfahren</a>
+  <a href="{{site.baseurl}}/gewinnspiel" class="btn btn--white">Mehr erfahren</a>
       </div>
     </div>
   </div>
