--- a/_layouts/competition.html
+++ b/_layouts/competition.html
@@ -34,7 +34,7 @@ layout: default
         <div class="space--lg"></div>
         <a href="#enter" class="btn btn--blue">{{prize.enter-cta}}</a>
         {% if prize.external-cta %}
-  <a href="{{prize.external-link}}" target="_blank" class="btn  btn--outline btn--outline-turquoise" style="">{{prize.external-cta}}</a>
+  <a href="{{prize.external-link}}" target="_blank" class="btn  btn--outline btn--outline-blue" style="">{{prize.external-cta}}</a>
 {% endif %}
       </div>
     </div>
