--- a/_assets/sass/grid/_grid.scss
+++ b/_assets/sass/grid/_grid.scss
@@ -102,6 +102,8 @@
   // default gutters
   @include gutter-sizes($s2, $s4, $lg);
   &--gutters {
+    // tiny gutters
+    &-xs { @include gutter-sizes($s0, $s1, $lg); }
     // small gutters
     &-sm { @include gutter-sizes($s0, $s2, $lg); }
     // large gutters
