--- a/_includes/components/logo-partner.html
+++ b/_includes/components/logo-partner.html
@@ -3,7 +3,7 @@
   <img src="{{site.img}}/logo/{{page.logo}}" alt="{{page.title}} Logo">
 </a>
 {% endif %}
-<a id="track-partner-logo{{include.placement | prepend: '-'}}" class="logo logo--partner{% if include.small %} logo--partner-sm{% endif %}" href="{{site.client.link}}">
+<a id="track-partner-logo{{include.placement | prepend: '-'}}" class="logo logo--partner{% if include.small %} logo--partner-sm{% endif %}" href="{{site.client.link}}" target="_blank">
   <img src="{{site.img}}/logo/partner.svg" alt="{{site.client.name}} Logo">
 </a>
 <a id="track-partner-logo{{include.placement | prepend: '-'}}" class="logo logo--partner2{% if include.small %} logo--partner2-sm{% endif %}" href="{{site.client.link2}}" target="_blank">
