--- a/_includes/modal/content.html
+++ b/_includes/modal/content.html
@@ -1,6 +1,6 @@
 <div class="modal modal--standard is-closed" data-modal-id="{{modal.id}}">
   <div class="js-close-modal modal__close"></div>
-  <div class="modal__content">
+  <div class="modal__content bv-scroll">
     {{modal.content}}
   </div>
 </div>
